tests/e2e/inline_service_output4b.error
Error: syntax error in story at line 1, column 25

1|          listen command to client
                              ^

E0041: `c` is not allowed here
